<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.giserpeng.ntripshare.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>
    <fragment
        android:id="@+id/nav_dash"
        android:name="com.giserpeng.ntripshare.ui.device.DeviceFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>
    <fragment
        android:id="@+id/nav_log"
        android:name="com.giserpeng.ntripshare.ui.log.LogFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.giserpeng.ntripshare.ui.About.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.giserpeng.ntripshare.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.giserpeng.ntripshare.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/nav_net"
        android:name="com.giserpeng.ntripshare.ui.net.NetFragment"
        android:label="@string/menu_net"
        tools:layout="@layout/fragment_net" />
</navigation>